# bifrost-platform-plugin

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  pyproject.toml
config/: gateway.yaml
k8s/ib-gateway/: configmap.yaml  deployment.yaml  kustomization.yaml  network-policy.yaml  pdb.yaml
k8s/redis-ib/: acl.conf.example  deployment.yaml  kustomization.yaml  network-policy.yaml  pdb.yaml  (+1 more)
scripts/: apply-external-names.sh  ensure-redis-ib-port-forward.sh  ib-gateway-set-live.sh  install-ib-gateway.sh  install-redis-ib.sh  rollout-tibm-dev-compose.sh  rollout-tibm-prod.sh  rollout-tibm-strategy.sh  rollout-tibm-w1-stg.sh  rollout-tibm-w2-stg.sh  rollout-tibm-w3-stg.sh  run_ib_gateway.py  sync-redis-ib-dev-compose-config.sh  sync_redis_ib_secrets.sh  verify-ib-gateway-live.sh  verify-ib-gateway-program.sh  verify-ib-gateway-rpc-parity.sh  verify-ib-gateway.sh  verify-redis-ib.sh  verify-tibm-strategy-alignment.sh  verify-trade-celery-bars.sh  verify-trade-celery-massive-loop-stg.sh  verify-trade-cutover.sh  verify-trade-ib-dev-read.sh  verify-trade-ib-health.sh  verify-trade-ib-migration-program-dev.sh  verify-trade-ib-migration-program.sh  verify-trade-ib-rollout-dev-compose.sh  verify-trade-ib-rollout-prod.sh  verify-trade-ib-rollout-stg.sh  verify-trade-ib-ui.sh  verify-trade-ib-w1-prod.sh  verify-trade-ib-w1-stg.sh  verify-trade-ib-w2-prod.sh  verify-trade-ib-w2-stg.sh  verify-trade-ib-w3-prod.sh  verify-trade-ib-w3-stg.sh  verify-trade-quotes-e2e.sh
tests/: test_connection.py  test_operator_ops.py  test_protocol.py  test_redis_contract.py
(+21 files in other folders)
